# castor

./: .gitignore  .gitmodules  Cargo.toml  build.py
assets/: Castor.cmb  castor.ui
src/: controllers.rs  data.rs  delegate.rs  main.py  main.rs  main_window.py  ui_main_window.py  widgets.rs
ui/: main_window.ui
