[package]
name = "castor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-recursion = "1.0.0"
glib = "0.16.7"
gtk4 = "0.5.5"
leda = { version = "0.5.0", features = ["async"] }
percent-encoding = "2.2.0"
thiserror = "1.0.38"
url = "2.3.1"
